--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,24 +11,24 @@
 # if you're sharing your code publicly.
 
 development:
-  email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
-  email_provider_api_key: <%= ENV["MANDRILL_API_KEY"] %>
+  email_provider_username: <%= ENV["amirminaa@gmail.com"] %>
+  email_provider_api_key: <%= ENV["0707googpass"] %>
   domain_name: example.com
-  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
-  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
+  mailchimp_api_key: <%= ENV["575a063a3e2ba8070fd4542f8024891a-us12"] %>
+  mailchimp_list_id: <%= ENV["Team"] %>
   owner_email: <%= ENV["OWNER_EMAIL"] %>
-  secret_key_base: very_long_random_string
+  secret_key_base: abcxyz123
 
 test:
-  secret_key_base: very_long_random_string
+  secret_key_base: abcxyz123
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  email_provider_username: <%= ENV["MANDRILL_USERNAME"] %>
-  email_provider_api_key: <%= ENV["MANDRILL_API_KEY"] %>
-  domain_name: <%= ENV["DOMAIN_NAME"] %>
-  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
-  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  owner_email: <%= ENV["OWNER_EMAIL"] %>
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  email_provider_username: <%= ENV["amirminaa@gmail.com"] %>
+  email_provider_api_key: <%= ENV["0707googpass"] %>
+  domain_name: <%= ENV["example.com"] %>
+  mailchimp_api_key: <%= ENV["575a063a3e2ba8070fd4542f8024891a-us12"] %>
+  mailchimp_list_id: <%= ENV["Team"] %>
+  owner_email: <%= ENV["amirminaa@gmail.com"] %>
+  secret_key_base: <%= ENV["abcxyz123"] %>
